fix: Fix atribute what overflow browser border

--- a/src/pages/AllocationUnits/Styles.css
+++ b/src/pages/AllocationUnits/Styles.css
@@ -61,6 +61,7 @@
   align-items: center;
   flex-wrap: wrap;
   padding: 20px;
+  flex-grow: 1;
 }
 
 .allocation-units .filter-content .filter-selection * {
@@ -70,8 +71,8 @@
   font-size: 16px;
   font-weight: bold;
   height: 50px;
-  width: 40vw;
   margin: 10px;
+  width: 30%;
   padding: 5px;
 }
 
